; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_bdiff.c_cmp.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_bdiff.c_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.line = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.line*, %struct.line*)* @cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp(%struct.line* %0, %struct.line* %1) #0 {
  %3 = alloca %struct.line*, align 8
  %4 = alloca %struct.line*, align 8
  store %struct.line* %0, %struct.line** %3, align 8
  store %struct.line* %1, %struct.line** %4, align 8
  %5 = load %struct.line*, %struct.line** %3, align 8
  %6 = getelementptr inbounds %struct.line, %struct.line* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.line*, %struct.line** %4, align 8
  %9 = getelementptr inbounds %struct.line, %struct.line* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp ne i64 %7, %10
  br i1 %11, label %32, label %12

12:                                               ; preds = %2
  %13 = load %struct.line*, %struct.line** %3, align 8
  %14 = getelementptr inbounds %struct.line, %struct.line* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load %struct.line*, %struct.line** %4, align 8
  %17 = getelementptr inbounds %struct.line, %struct.line* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %15, %18
  br i1 %19, label %32, label %20

20:                                               ; preds = %12
  %21 = load %struct.line*, %struct.line** %3, align 8
  %22 = getelementptr inbounds %struct.line, %struct.line* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 8
  %24 = load %struct.line*, %struct.line** %4, align 8
  %25 = getelementptr inbounds %struct.line, %struct.line* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = load %struct.line*, %struct.line** %3, align 8
  %28 = getelementptr inbounds %struct.line, %struct.line* %27, i32 0, i32 1
  %29 = load i64, i64* %28, align 8
  %30 = call i64 @memcmp(i32 %23, i32 %26, i64 %29)
  %31 = icmp ne i64 %30, 0
  br label %32

32:                                               ; preds = %20, %12, %2
  %33 = phi i1 [ true, %12 ], [ true, %2 ], [ %31, %20 ]
  %34 = zext i1 %33 to i32
  ret i32 %34
}

declare dso_local i64 @memcmp(i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
